k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: merge-build-repeat
  labels:
    name: merge-build-repeat
