k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: application
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app: application
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: chat-database
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app: chat-database
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: genai
  namespace: merge-build-repeat
spec:
  type: ClusterIP
  selector:
    app: genai
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
