k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: merge-build-repeat-ingress
  namespace: merge-build-repeat
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
#    # Keep path prefix when forwarding; adjust if you need rewrite behavior
#    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: application
                port:
                  number: 8080
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: chat-database
                port:
                  number: 8080
          - path: /genai
            pathType: Prefix
            backend:
              service:
                name: genai
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
